push fix lab4-security part 2